# cli_students_rating

./: .gitignore  CMakeLists.txt  README.md  all_rating.cpp  all_rating.h  allrating.cpp  allrating.h  arg_parser.cpp  arg_parser.h  attendance.cpp  attendance.h  crit_lib.h  criteria.h  errors.h  main.cpp  marks.cpp  marks.h  onerating.cpp  onerating.h  output.cpp  output.h  pluses.cpp  pluses.h  strategy.cpp  strategy.h  students_sort.cpp  students_sort.h
json files/: attendance.json  test.json
